Adjusting to RS 2.6 to answer 2019 SMJ R&$